[metadata]
name = Airwave Blitz
version = 0.0.1
description = Audit tool for Wi-Fi.
long_description = file: README.md
author = Dimitri Kipiani & Zurab Mujirishvili
author_email = dim.kipiani@gmail.ge


[options]
package_dir =
    =app
packages = find:
python_requires = >=3.8
setup_requires =
      setuptools

[options.packages.find]
where=app
